Geometry of external objects loses its attributes after subdivision #85691

Closed
opened 2021-02-16 12:06:32 +01:00 by Simon Thommes · 9 comments
Member

Geometry that is referenced in the node tree via Object Info or Collection info node loses its attribute information if there is a subdivision surface modifier on the object.

Doing the subdivision in the nodetree itself results not in the complete loss but in artifacts, as newly generated vertices seem get initialized with 0 instead of interpolated.
(This is a separate issue, addressed in #85697)

subdiv_attribute_lost-2021-02-16_11.53.40.mp4

subdiv_attribute_lost.blend

Geometry that is referenced in the node tree via Object Info or Collection info node loses its attribute information if there is a subdivision surface modifier on the object. Doing the subdivision in the nodetree itself results not in the complete loss but in artifacts, as newly generated vertices seem get initialized with 0 instead of interpolated. (This is a separate issue, addressed in #85697) [subdiv_attribute_lost-2021-02-16_11.53.40.mp4](https://archive.blender.org/developer/F9807921/subdiv_attribute_lost-2021-02-16_11.53.40.mp4) [subdiv_attribute_lost.blend](https://archive.blender.org/developer/F9807920/subdiv_attribute_lost.blend)
Author
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Author
Member

Added subscriber: @SimonThommes

Added subscriber: @SimonThommes

#87441 was marked as duplicate of this issue

#87441 was marked as duplicate of this issue
Simon Thommes changed title from Attributes of external objects lose their attributes after subdivision to Geometry of external objects loses its attributes after subdivision 2021-02-16 12:07:04 +01:00
Author
Member

Added subscriber: @eyecandy

Added subscriber: @eyecandy
Member

Added subscribers: @Ace_Dragon, @mano-wii

Added subscribers: @Ace_Dragon, @mano-wii
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

Turns out, 3e87d8a431 already "fixed" it for vertex groups with the change in object_update.c. Looks like they went for the dirty route of never automatically deleting vertex groups automatically. I guess the main case where this would be bad is when there is a character with a larger number of vertex groups which is subdivided after the armature modifier.

Given that this is fixed for vertex groups now, the other task I merged is not actually a duplicate anymore. I wonder if the real solution would be to never delete custom data layers by default and to leave this as a responsibility for the artist for scene optimization.

Turns out, 3e87d8a431 already "fixed" it for vertex groups with the change in `object_update.c`. Looks like they went for the dirty route of never automatically deleting vertex groups automatically. I guess the main case where this would be bad is when there is a character with a larger number of vertex groups which is subdivided after the armature modifier. Given that this is fixed for vertex groups now, the other task I merged is not actually a duplicate anymore. I wonder if the real solution would be to never delete custom data layers by default and to leave this as a responsibility for the artist for scene optimization.

This issue was referenced by 382b06c80c

This issue was referenced by 382b06c80cacb0ee940f2783f4619580b04aa502
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Jacques Lucke self-assigned this 2021-04-16 11:28:58 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#85691
No description provided.